--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,33 @@
 <groupId>com.company</groupId>
 <artifactId>helloworld</artifactId>
 <packaging>jar</packaging>
-<version>1.0.0</version>
+<version>1.0.1</version>
 <name>helloworld</name>
 
-</project>
+<dependencies>
+<dependency> 
+<groupId>junit</groupId> 
+<artifactId>junit</artifactId> 
+<version>4.11</version> 
+<scope>test</scope> 
+</dependency>
 
+<dependency>
+<groupId>org.hamcrest</groupId>
+<artifactId>hamcrest-all</artifactId>
+<version>1.1</version>
+</dependency>
+</dependencies>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <url>http://ec2-3-17-179-142.us-east-2.compute.amazonaws.com:8081/repository/sc_snapshot/</url>
+    </snapshotRepository>
+    <repository>
+      <id>nexus-releases</id>
+      <url>http://ec2-3-17-179-142.us-east-2.compute.amazonaws.com:8081/repository/sc_release/</url>
+    </repository>
+  </distributionManagement>
+
+</project>
