--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,11 @@
   <distributionManagement>
     <snapshotRepository>
       <id>nexus-snapshots</id>
-      <url>http://ec2-18-222-111-162.us-east-2.compute.amazonaws.com:8081/repository/sc_snapshot/</url>
+      <url>http://172.31.9.209:8081/repository/sc_snapshot/</url>
     </snapshotRepository>
     <repository>
       <id>nexus-releases</id>
-      <url>http://ec2-18-222-111-162.us-east-2.compute.amazonaws.com:8081/repository/sc_release/</url>
+      <url>http://172.31.9.209:8081/repository/sc_release/</url>
     </repository>
   </distributionManagement>
 
